# AiTaskManager

./: .gitignore  AGENTS.md  README.md  install-skill.sh  install.sh  pyproject.toml
.opencode/commands/: next.md  task-add.md  task-agent.md  task-list.md  verify.md
.opencode/skills/task-workflow/: SKILL.md
src/taskcli/: __init__.py  backend.py  claude_dispatch.py  claude_spec.py  config.py  embeddings.py  file_lock.py  git_sync.py  hooks.py  importers.py  main.py  mcp_server.py  models.py  parser.py  store.py  telemetry.py  triage.py  watch.py
src/taskcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/taskcli/commands/: add_cmd.py  agent_cmd.py  attach_cmd.py  debug.py  done.py  due_cmd.py  fail_cmd.py  find_cmd.py  import_cmd.py  init.py  list_cmd.py  mcp_cmd.py  next_cmd.py  pass_cmd.py  quick_cmd.py  show_cmd.py  standup_cmd.py  stats_cmd.py  sync_cmd.py  triage_cmd.py  watch_cmd.py
src/taskcli/tui/: app.py
tests/: test_backend.py  test_config.py  test_dag.py  test_global_root.py  test_mcp_server.py  test_models.py  test_parser.py  test_pipeline.py  test_store.py
