[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskcli"
version = "0.1.0"
description = "CLI para manejar tasks con AI de forma efectiva"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.0",
    "textual>=0.50",
    "pyyaml>=6.0.1",
    "mcp>=1.0,<2",
]
license = {text = "MIT"}

[project.scripts]
task = "taskcli.main:entry"
task-mcp = "taskcli.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
